[package]
name = "rustypow"
version = "0.1.0"
authors = ["Jakob Johnson <johnsonjakob99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour_sync = "0.21.2"
serde = "1.0.59"
serde_json = "1.0.59"
lettre = "0.10.0-alpha.4"
log = "0.4.11"
env_logger = "0.8.2"

